@@ -3,6 +3,7 @@ package uk.go.hm.icb.service.dvla;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 import uk.go.hm.icb.dto.DrivingLicenceRecord;
 import uk.go.hm.icb.dto.ICBMatch;
 import uk.go.hm.icb.dto.ICBMultiMatch;
@@ -22,12 +23,12 @@ public class DVLAService implements SearchStrategy {
     
     private static final String CSV_FILE_PATH = "classpath:driving_licence_records.csv";
 
-    private final DrivingLicenceDataLoader recordLoader;
+    private final DVLADataLoader recordLoader;
 
-    private long delay;
+    private final long delay;
 
     @Autowired
-    public DVLAService(DrivingLicenceDataLoader recordLoader, @Value("${app.dvla.delay}") long delay) {
+    public DVLAService(DVLADataLoader recordLoader, @Value("${app.dvla.delay}") long delay) {
         this.recordLoader = recordLoader;
         this.delay = delay;
     }
@@ -38,31 +39,56 @@ public class DVLAService implements SearchStrategy {
      * */
     @Override
     public ICBResponse search(ICBRequest request) {
-        ICBMatch.ICBMatchBuilder matchBuilder = ICBMatch.builder();
         ICBResponse.ICBResponseBuilder responseBuilder = ICBResponse.builder().searchSource(SearchSource.DVLA);
         Optional<SearchIdentifiers> searchDLIdentifiers = Optional.ofNullable(request.getSearchIDTypes()).orElse(List.of())
-                .stream().filter(t -> SearchIDType.DRIVER_LICENSE == t.getIdType()).findFirst();
-        List<DrivingLicenceRecord> list = recordLoader.getRecords().stream().filter(rec -> searchDLIdentifiers.map(si -> si.getIdValue().equalsIgnoreCase(rec.getDrivingLicenseNumber())).orElse(true)
-                )
-                .filter(rec -> Optional.ofNullable(request.getSearchBioDetails().getFirstName()).map(f -> f.equalsIgnoreCase(rec.getFirstName())).orElse(false))
-                .filter(rec -> Optional.ofNullable(request.getSearchBioDetails().getLastName()).map(f -> f.equalsIgnoreCase(rec.getLastName())).orElse(false))
-                .filter(rec -> Optional.ofNullable(request.getSearchBioDetails().getMiddleName()).map(f -> f.equalsIgnoreCase(rec.getMiddleName())).orElse(true))
-                .toList();
+                .stream().filter(t -> SearchIDType.DRIVER_LICENSE == t.getIdType()).filter(t -> StringUtils.hasText(t.getIdValue()))
+                .findFirst();
+        List<DrivingLicenceRecord> dvlaRecords = recordLoader.getRecords();
+        List<DrivingLicenceRecord> list;
+        if (searchDLIdentifiers.isPresent()) {
+            list = dvlaRecords.stream()
+                    .filter(rec -> searchDLIdentifiers
+                            .map(si -> si.getIdValue().equalsIgnoreCase(rec.getDrivingLicenseNumber()))
+                            .orElse(false))
+                    .toList();
+        } else {
+            list = dvlaRecords.stream()
+                    .filter(rec -> Optional.ofNullable(request.getSearchBioDetails().getLastName())
+                            .map(f -> f.equalsIgnoreCase(rec.getLastName())).orElse(false))
+                    .toList();
+        }
+
         if (list.isEmpty()) {
             responseBuilder.matchStatus("No match found");
         } else if (list.size() == 1) {
-            DrivingLicenceRecord record = list.get(0);
-            String dlMatched = Optional.ofNullable(record.getDrivingLicenseNumber()).map(dl -> dl.equalsIgnoreCase(searchDLIdentifiers.map(SearchIdentifiers::getIdValue).orElse(""))).map(b -> b ? "YES" : "NO").orElse("-");
-            String middleNameMatched = Optional.ofNullable(record.getMiddleName()).map(mn -> mn.equalsIgnoreCase(request.getSearchBioDetails().getMiddleName())).map(b -> b ? "YES" : "NO").orElse("-");
-            matchBuilder.matches("YES", "YES", middleNameMatched, "YES", "YES", "-", dlMatched);
+            ICBMatch.ICBMatchBuilder matchBuilder = ICBMatch.builder();
+            DrivingLicenceRecord record = list.getFirst();
+            String lastNameMatched = "NO";
+            String dvlaMatched = Optional.ofNullable(record.getDrivingLicenseNumber())
+                    .map(dl -> dl.equalsIgnoreCase(searchDLIdentifiers
+                            .map(SearchIdentifiers::getIdValue)
+                            .orElse("")))
+                    .map(b -> b ? "YES" : "NO")
+                    .orElse("-");
+            if (dvlaMatched.equals("NO")) {
+                lastNameMatched = Optional.ofNullable(record.getLastName())
+                        .map(mn -> mn.equalsIgnoreCase(request.getSearchBioDetails().getLastName()))
+                        .map(b -> b ? "YES" : "NO")
+                        .orElse("-");
+            }
+
+            matchBuilder.matches("No", lastNameMatched, "-", "No", "-", "-", dvlaMatched);
             responseBuilder.matchStatus("One match found").match(matchBuilder.build());
         } else {
-            responseBuilder.matchStatus("Multiple matches found").multiMatches(
-            list.stream().map(rec -> ICBMultiMatch.builder().firstName(rec.getFirstName())
-                    .lastName(rec.getLastName()).middleName(rec.getMiddleName())
-                    .dateOfBirth(rec.getDateOfBirth()).address(rec.getAddress())
-                    .build()).toList());
-            responseBuilder.match(matchBuilder.build());
+            responseBuilder.matchStatus("Multiple matches found")
+                    .multiMatches(
+                            list.stream().map(rec -> ICBMultiMatch.builder()
+                                    .firstName(rec.getFirstName())
+                                    .lastName(rec.getLastName())
+                                    .middleName(rec.getMiddleName())
+                                    .dateOfBirth(rec.getDateOfBirth())
+                                    .address(rec.getAddress())
+                                    .build()).toList());
         }
         return responseBuilder.searchComplete(true).build();
     }
